core/keyrx_ffi_macro/tests/ui/fail_wrong_attr_key.stderr
error: expected `domain`, found `module`
 --> tests/ui/fail_wrong_attr_key.rs:7:13
  |
7 | #[keyrx_ffi(module = "config")]
  |             ^^^^^^
